# advent-of-code

./: .gitignore  README.adoc
2022/haskell/: .gitignore  README.adoc  cabal.project  justfile
2022/haskell/daily-template/: dayxx.cabal
2022/haskell/daily-template/app/: Main.hs  Solver.hs
2022/haskell/daily-template/tests/: test.hs
2022/haskell/day01/: day01.cabal
2022/haskell/day01/app/: Main.hs  Solver.hs
2022/haskell/day01/tests/: test.hs
2022/haskell/scripts/: fetch-input.sh
2023/haskell/: README.adoc  cabal.project  justfile
2023/haskell/daily-template/: dayxx.cabal  part1.hs
2023/haskell/day01/: day01.cabal  part1.hs  part2.hs
2023/haskell/day02/: part1.hs  part2.hs
2023/haskell/day03/: part1.hs  part2.hs
2023/haskell/day20/: part1.hs  part2.hs
2023/haskell/day22/: part1.hs
2023/haskell/day24/: part1.hs
2023/haskell/day25/: part1.hs
2023/haskell/scripts/: fetch-input.sh  scaffold.sh
2023/rust/: Cargo.toml  README.adoc  justfile
2023/rust/day02/: Cargo.toml
2023/rust/day02/src/: lib.rs
2023/rust/day03/: Cargo.toml
2023/rust/day03/src/: lib.rs
2023/rust/day05/: Cargo.toml
2023/rust/day06/: Cargo.toml
2023/rust/day07/: Cargo.toml
2023/rust/day08/: Cargo.toml
2023/rust/day09/: Cargo.toml
2023/rust/day10/: Cargo.toml
2023/rust/day11/: Cargo.toml
2023/rust/day12/: Cargo.toml
2023/rust/day14/: Cargo.toml
2023/rust/day15/: Cargo.toml
2023/rust/day16/: Cargo.toml
2023/rust/day17/: Cargo.toml
2023/rust/day18/: Cargo.toml
2023/rust/day19/: Cargo.toml
2023/rust/day21/: Cargo.toml
2023/rust/day23/: Cargo.toml
2023/rust/scripts/: fetch-input.rs
2024/haskell/: README.adoc  cabal.project  justfile
2024/haskell/daily-template/: dayxx.cabal  part1.hs
2024/haskell/day01/: day01.cabal  part1.hs  part2.hs
2024/haskell/day02/: day02.cabal  part1.hs  part2.hs
2024/haskell/day03/: day03.cabal  part1.hs  part2.hs
2024/haskell/day04/: day04.cabal  part1.hs  part2.hs
2024/haskell/day05/: day05.cabal  part1.hs  part2.hs
2024/haskell/day06/: day06.cabal  part1.hs  part2.hs
2024/haskell/day07/: day07.cabal  part1.hs  part2.hs
2024/haskell/day08/: day08.cabal  part1.hs  part2.hs
2024/haskell/day09/: day09.cabal  part1.hs  part2.hs
2024/haskell/day10/: day10.cabal  part1.hs  part2.hs
2024/haskell/day11/: day11.cabal  part1.hs  part2.hs
2024/haskell/day12/: day12.cabal  part1.hs  part2.hs
2024/haskell/day13/: day13.cabal  part1.hs  part2.hs
2024/haskell/day14/: day14.cabal  part1.hs  part2.hs
2024/haskell/day15/: day15.cabal  part1.hs  part2.hs
2024/haskell/day16/: day16.cabal  part1.hs  part2.hs
2024/haskell/day17/: day17.cabal  part1.hs
2024/haskell/day23/: day23.cabal  part1.hs  part2.hs
2024/haskell/day24/: day24.cabal  part1.hs  part2.hs
2024/haskell/day25/: day25.cabal  part1.hs  part2.hs
2024/haskell/scripts/: fetch-input.sh
2025/haskell/: README.adoc  justfile
2025/haskell/daily-template/: dayxx.cabal
2025/haskell/day01/: day01.cabal
2025/haskell/day01/app/: Solver.hs
2025/haskell/day01/tests/: test.hs
2025/haskell/day02/: day02.cabal
2025/haskell/day02/app/: Main.hs  Solver.hs
2025/haskell/day02/tests/: test.hs
2025/haskell/day03/: day03.cabal
2025/haskell/day03/app/: Main.hs  Solver.hs
2025/haskell/day03/tests/: test.hs
2025/haskell/day04/: day04.cabal
2025/haskell/day04/app/: Solver.hs
2025/haskell/day04/tests/: test.hs
2025/haskell/day05/: day05.cabal
2025/haskell/day05/app/: Main.hs  Solver.hs
2025/haskell/day05/tests/: test.hs
2025/haskell/day06/: day06.cabal
2025/haskell/day06/app/: Main.hs  Solver.hs
2025/haskell/day06/tests/: test.hs
2025/haskell/day07/: day07.cabal
2025/haskell/day08/: day08.cabal
2025/haskell/day08/app/: Solver.hs
2025/haskell/day09/: day09.cabal
2025/haskell/day10/: day10.cabal
2025/haskell/scripts/: fetch-input.sh
(+5 files in other folders)
